--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1756,95 +1756,39 @@ body {
 .cid-r33LzYrUSp {
   background-image: url("../../../assets/images/an-twin-towing-24-hours-sanford-fl-17-512x384.jpg");
 }
-.cid-r34zbZRbe9 {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #f9f9f9;
+.cid-r354d7uMPF {
+  padding-top: 45px;
+  padding-bottom: 45px;
+  background-color: #fafafa;
 }
-.cid-r34zbZRbe9 .mbr-section-subtitle {
-  color: #767676;
+.cid-r354d7uMPF h3 {
+  text-align: center;
   font-weight: 300;
 }
-.cid-r34zbZRbe9 .media-container-row {
+.cid-r354d7uMPF .wrap {
+  width: 150px;
+  height: 150px;
+  margin: 0 auto;
+}
+.cid-r354d7uMPF .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-r354d7uMPF .card {
+  -webkit-flex-basis: 100%;
+  flex-basis: 100%;
   word-wrap: break-word;
-  word-break: break-word;
-  align-items: stretch;
-  -webkit-align-items: stretch;
 }
-.cid-r34zbZRbe9 .card_cont {
-  -o-transition: all .5s;
-  -ms-transition: all .5s;
-  -moz-transition: all .5s;
-  -webkit-transition: all .5s;
-  transition: all .5s;
-  -o-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  text-align: center;
-  background-color: #eee;
+.cid-r354d7uMPF ellipse {
+  stroke: rgba(206, 206, 206, 0.4);
 }
-.cid-r34zbZRbe9 .card-front {
-  z-index: 2;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
+.cid-r354d7uMPF path {
+  stroke: #149dcc;
 }
-.cid-r34zbZRbe9 .card-front img {
-  min-height: 100%;
-  min-width: 100%;
-  width: auto;
-  max-width: 600px;
-}
-.cid-r34zbZRbe9 .card_back {
-  width: 100%;
-  height: 100%;
-  padding: 30px 30px;
-  color: #ffffff;
-  background-color: #55b4d4;
-  z-index: 1;
-  margin: 0;
-  text-align: center;
-  overflow: hidden;
-  -o-transform: rotateX(-180deg);
-  -ms-transform: rotateX(-180deg);
-  -moz-transform: rotateX(-180deg);
-  -webkit-transform: rotateX(-180deg);
-  transform: rotateX(-180deg);
-}
-.cid-r34zbZRbe9 .card {
-  min-height: 300px;
-}
-.cid-r34zbZRbe9 .card:hover .card-front {
-  z-index: 1;
-  -o-transform: rotateX(180deg);
-  -ms-transform: rotateX(180deg);
-  -moz-transform: rotateX(180deg);
-  -webkit-transform: rotateX(180deg);
-  transform: rotateX(180deg);
-}
-.cid-r34zbZRbe9 .card:hover .card_back {
-  z-index: 2;
-  -o-transform: rotateX(0deg);
-  -ms-transform: rotateX(0deg);
-  -moz-transform: rotateX(0deg);
-  -webkit-transform: rotateX(0deg);
-  transform: rotateX(0deg);
-}
-.cid-r34zbZRbe9 .builderCard .card_back {
-  border-bottom-left-radius: 100px;
-}
-.cid-r34zbZRbe9 .builderCard .card_cont {
-  -o-backface-visibility: hidden;
-  -ms-backface-visibility: hidd;
-  -moz-backface-visibility: visible;
-  -webkit-backface-visibility: visible;
-  backface-visibility: visible;
+@media (max-width: 991px) and (min-width: 768px) {
+  .cid-r354d7uMPF .card {
+    -webkit-flex-basis: 33%;
+    flex-basis: 33%;
+  }
 }
 .cid-r34vs7RRnc .modal-body .close {
   background: #1b1b1b;
@@ -2084,8 +2028,8 @@ body {
   z-index: auto;
 }
 .cid-r34BLModsw {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 60px;
+  padding-bottom: 30px;
   background-color: #ffffff;
 }
 .cid-r34BLModsw .mbr-section-subtitle {
