--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -92,12 +92,15 @@ body {
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
-  padding: 1rem 3rem;
-  border-radius: 3px;
   display: inline-flex;
   align-items: center;
   justify-content: center;
   word-break: break-word;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+  display: -webkit-inline-flex;
+  padding: 1rem 3rem;
+  border-radius: 3px;
 }
 .btn-sm {
   font-weight: 500;
@@ -528,20 +531,9 @@ a.text-black:focus {
 .alert-danger {
   background-color: #36c609;
 }
-.mbr-section-btn a.btn:not(.btn-form) {
-  border-radius: 100px;
-}
 .mbr-section-btn a.btn:not(.btn-form):hover,
 .mbr-section-btn a.btn:not(.btn-form):focus {
   box-shadow: none !important;
-}
-.mbr-section-btn a.btn:not(.btn-form):hover,
-.mbr-section-btn a.btn:not(.btn-form):focus {
-  box-shadow: 0 10px 40px 0 rgba(0, 0, 0, 0.2) !important;
-  -webkit-box-shadow: 0 10px 40px 0 rgba(0, 0, 0, 0.2) !important;
-}
-.mbr-gallery-filter li a {
-  border-radius: 100px !important;
 }
 .mbr-gallery-filter li.active .btn {
   background-color: #149dcc;
@@ -550,9 +542,6 @@ a.text-black:focus {
 }
 .mbr-gallery-filter li.active .btn:focus {
   box-shadow: none;
-}
-.nav-tabs .nav-link {
-  border-radius: 100px !important;
 }
 .btn-form {
   border-radius: 0;
@@ -585,9 +574,6 @@ a:hover {
   color: #7df757;
 }
 /* Scroll to top button*/
-#scrollToTop a {
-  border-radius: 100px;
-}
 #scrollToTop a i:before {
   content: '';
   position: absolute;
@@ -608,6 +594,7 @@ a:hover {
   left: 30%;
   bottom: 30%;
   transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
 }
 /* Others*/
 .note-check a[data-value=Rubik] {
@@ -648,6 +635,7 @@ a:hover {
   position: absolute;
   transform: rotate(45deg);
   width: 14px;
+  -webkit-transform: rotate(45deg);
 }
 .form-control {
   background-color: #f5f5f5;
@@ -709,49 +697,11 @@ pre {
 }
 .mbr-section__comments .row {
   justify-content: center;
+  -webkit-justify-content: center;
 }
 /* Forms */
 .mbr-form .btn {
   margin: .4rem 0;
-}
-.mbr-form .input-group-btn a.btn {
-  border-radius: 100px !important;
-}
-.mbr-form .input-group-btn a.btn:hover {
-  box-shadow: 0 10px 40px 0 rgba(0, 0, 0, 0.2);
-}
-.mbr-form .input-group-btn button[type="submit"] {
-  border-radius: 100px !important;
-  padding: 1rem 3rem;
-}
-.mbr-form .input-group-btn button[type="submit"]:hover {
-  box-shadow: 0 10px 40px 0 rgba(0, 0, 0, 0.2);
-}
-.form2 .form-control {
-  border-top-left-radius: 100px;
-  border-bottom-left-radius: 100px;
-}
-.form2 .input-group-btn a.btn {
-  border-top-left-radius: 0 !important;
-  border-bottom-left-radius: 0 !important;
-}
-.form2 .input-group-btn button[type="submit"] {
-  border-top-left-radius: 0 !important;
-  border-bottom-left-radius: 0 !important;
-}
-.form3 input[type="email"] {
-  border-radius: 100px !important;
-}
-@media (max-width: 349px) {
-  .form2 input[type="email"] {
-    border-radius: 100px !important;
-  }
-  .form2 .input-group-btn a.btn {
-    border-radius: 100px !important;
-  }
-  .form2 .input-group-btn button[type="submit"] {
-    border-radius: 100px !important;
-  }
 }
 @media (max-width: 767px) {
   .btn {
@@ -797,39 +747,7 @@ pre {
 .mbr-footer .mbr-contacts li a:hover {
   color: #149dcc;
 }
-.footer3 input[type="email"],
-.footer4 input[type="email"] {
-  border-radius: 100px !important;
-}
-.footer3 .input-group-btn a.btn,
-.footer4 .input-group-btn a.btn {
-  border-radius: 100px !important;
-}
-.footer3 .input-group-btn button[type="submit"],
-.footer4 .input-group-btn button[type="submit"] {
-  border-radius: 100px !important;
-}
 /* Headers*/
-.header13 .form-inline input[type="email"],
-.header14 .form-inline input[type="email"] {
-  border-radius: 100px;
-}
-.header13 .form-inline input[type="text"],
-.header14 .form-inline input[type="text"] {
-  border-radius: 100px;
-}
-.header13 .form-inline input[type="tel"],
-.header14 .form-inline input[type="tel"] {
-  border-radius: 100px;
-}
-.header13 .form-inline a.btn,
-.header14 .form-inline a.btn {
-  border-radius: 100px;
-}
-.header13 .form-inline button,
-.header14 .form-inline button {
-  border-radius: 100px !important;
-}
 .offset-1 {
   margin-left: 8.33333%;
 }
@@ -1160,10 +1078,7 @@ pre {
     align-items: center;
   }
   .navbar-toggleable-sm .navbar-collapse {
-    display: -webkit-box !important;
-    display: -webkit-flex !important;
-    display: -ms-flexbox !important;
-    display: flex !important;
+    display: none;
     width: 100%;
   }
   .navbar-toggleable-sm .navbar-toggler {
@@ -1351,6 +1266,7 @@ pre {
 }
 .menu .navbar.collapsed:not(.beta-menu) {
   flex-direction: column;
+  -webkit-flex-direction: column;
 }
 .carousel-item.active,
 .carousel-item-next,
@@ -1754,7 +1670,7 @@ body {
   color: #c1c1c1 !important;
 }
 .cid-r33LzYrUSp {
-  background-image: url("../../../assets/images/an-twin-towing-24-hours-sanford-fl-17-512x384.jpg");
+  background-image: url("../../../assets/images/cut-dollar-cutdollar.com-royalty-free-images-towing-1-2000x1125.jpg");
 }
 .cid-r354d7uMPF {
   padding-top: 45px;
@@ -2088,6 +2004,24 @@ body {
 .cid-r34BLModsw B {
   color: #55b4d4;
 }
+.cid-r7siVOYwqF {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #f9f9f9;
+}
+.cid-r7siVOYwqF .mbr-text {
+  color: #767676;
+}
+.cid-r7siVOYwqF h4 {
+  text-align: center;
+}
+.cid-r7siVOYwqF p {
+  text-align: center;
+}
+.cid-r7siVOYwqF .card-img span {
+  font-size: 96px;
+  color: #149dcc;
+}
 .cid-r34BAXlLIs {
   padding-top: 90px;
   padding-bottom: 90px;
@@ -2143,31 +2077,14 @@ body {
     font-size: 4.25rem;
   }
 }
-.cid-r34BHqThbV {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-image: url("../../../assets/images/contact-us-1-1920x1080.png");
+.cid-r7shcEwF6A {
+  background: linear-gradient(45deg, #149dcc, #149dcc);
 }
-.cid-r34BHqThbV .title {
-  margin-bottom: 2rem;
+.cid-r7shcEwF6A .mbr-section-subtitle {
+  font-style: italic;
+  letter-spacing: 1rem;
 }
-.cid-r34BHqThbV .mbr-section-subtitle {
-  color: #ffffff;
-}
-.cid-r34BHqThbV a:not([href]):not([tabindex]) {
-  color: #fff;
-  border-radius: 3px;
-}
-.cid-r34BHqThbV a.btn-white:not([href]):not([tabindex]) {
-  color: #333;
-}
-.cid-r34BHqThbV .multi-horizontal {
-  flex-grow: 1;
-  -webkit-flex-grow: 1;
-  max-width: 100%;
-}
-.cid-r34BHqThbV .input-group-btn {
-  display: block;
+.cid-r7shcEwF6A P {
   text-align: center;
 }
 .cid-r34BJ0rjTA .google-map {
@@ -2265,4 +2182,267 @@ body {
 }
 .cid-r34BTUCtJi .media-container-row .row-copirayt p {
   width: 100%;
+}
+.cid-r7TUCxupXH {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-r7TUCxupXH .line {
+  background-color: #149dcc;
+  color: #149dcc;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-r7TUCxupXH .section-text {
+  padding: 2rem 0;
+}
+.cid-r7TUCxupXH .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-r7TUCxupXH .inner-container {
+    width: 100% !important;
+  }
+}
+.cid-r7TUCxupXH .section-text B {
+  color: #ff0000;
+}
+.cid-r7TUEb7EpS {
+  padding-top: 0px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-r7TUEb7EpS .mbr-section-subtitle {
+  color: #767676;
+  font-weight: 300;
+}
+.cid-r7TUEb7EpS .number-wrap {
+  color: #ffffff;
+  border-color: rgba(255, 255, 255, 0.15);
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  padding: 5px 10px 13px 10px;
+  margin: 0;
+  min-width: 118px;
+  border-radius: 2px;
+  max-width: 100%;
+}
+.cid-r7TUEb7EpS .number {
+  font-style: normal;
+  font-weight: 700;
+  text-transform: none;
+  letter-spacing: -2px;
+  font-size: 55px;
+  word-spacing: 0;
+  line-height: 1.3;
+  color: #ffffff;
+}
+.cid-r7TUEb7EpS .period {
+  display: block;
+  padding-top: 2px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+.cid-r7TUEb7EpS .dot {
+  position: absolute;
+  top: -10px;
+  right: -1em;
+  width: 1em;
+  display: block;
+  font-size: 55px;
+  height: 83%;
+  overflow: hidden;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 89.65px;
+  text-transform: none;
+  letter-spacing: 0;
+  word-spacing: 0;
+  color: #ffffff;
+}
+.cid-r7TUEb7EpS .countdown-cont {
+  background: linear-gradient(45deg, #36c609, #36c609);
+  max-width: 700px;
+  border-radius: 3px;
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-r7TUEb7EpS .dot {
+    display: none;
+  }
+}
+@media (max-width: 543px) {
+  .cid-r7TUEb7EpS .number-wrap {
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 550px) {
+  .cid-r7TUEb7EpS .col-xs-3 {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .cid-r7TUEb7EpS .number-wrap {
+    min-width: auto;
+  }
+}
+@media (max-width: 440px) {
+  .cid-r7TUEb7EpS .number,
+  .cid-r7TUEb7EpS .dot {
+    font-size: 40px;
+  }
+}
+@media (max-width: 380px) {
+  .cid-r7TUEb7EpS .period {
+    font-size: 0.8rem;
+  }
+}
+.cid-r7TUEb7EpS H5 {
+  color: #ff3366;
+}
+.cid-r7TUEb7EpS B {
+  color: #232323;
+}
+.cid-r7TUEb7EpS .mbr-section-subtitle B {
+  color: #00a30a;
+}
+.cid-r7TUKALwEy {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #efefef;
+}
+.cid-r7TUKALwEy .list-group-item {
+  padding: .75rem 3.25rem;
+}
+.cid-r7TUKALwEy .plan {
+  word-break: break-word;
+  position: relative;
+  max-width: 300px;
+  padding-right: 0;
+  padding-left: 0;
+  color: #767676;
+}
+.cid-r7TUKALwEy .plan .list-group-item {
+  position: relative;
+  -webkit-justify-content: center;
+  justify-content: center;
+  background-color: transparent;
+  border: 0;
+}
+.cid-r7TUKALwEy .plan .list-group-item::after {
+  position: absolute;
+  bottom: 0;
+  left: 20%;
+  width: 60%;
+  height: 2px;
+  content: "";
+  background-color: #eaeaea;
+}
+.cid-r7TUKALwEy .plan .list-group-item:last-child::after {
+  display: none;
+}
+.cid-r7TUKALwEy .plan.favorite {
+  background-color: #fff;
+  box-shadow: 0 0 60px 0 rgba(0, 0, 0, 0.07);
+}
+.cid-r7TUKALwEy .plan-header {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.cid-r7TUKALwEy .price-figure {
+  font-weight: 700;
+  color: #232323;
+}
+.cid-r7TUKALwEy .price-value {
+  font-weight: 700;
+  vertical-align: top;
+}
+@media (max-width: 550px) {
+  .cid-r7TUKALwEy .price-figure {
+    font-size: 4.25rem;
+  }
+}
+.cid-r7TUKALwEy UL {
+  text-align: left;
+}
+.cid-r7TUKALwEy B {
+  color: #00a30a;
+}
+.cid-r7TUKALwEy .price-term {
+  color: #00a30a;
+}
+.cid-r7TUS9xI1G {
+  padding-top: 30px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-r7TUS9xI1G .counter-container {
+  color: #767676;
+}
+.cid-r7TUS9xI1G .counter-container ul {
+  margin-bottom: 0;
+}
+.cid-r7TUS9xI1G .counter-container ul li {
+  margin-bottom: 1rem;
+  list-style: none;
+}
+.cid-r7TUS9xI1G .counter-container ul li:before {
+  position: absolute;
+  left: 0px;
+  margin-top: -10px;
+  padding-top: 3px;
+  content: '';
+  display: inline-block;
+  text-align: center;
+  margin: 5px 10px;
+  line-height: 20px;
+  transition: all .2s;
+  color: #ffffff;
+  background: #149dcc;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  content: '✓';
+}
+.cid-r7TUNUzHi1 {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+  position: relative;
+}
+.cid-r7TUNUzHi1 p {
+  color: #767676;
+}
+.cid-r7TUNUzHi1 .card {
+  border-radius: 0px;
+  margin-bottom: -1px;
+}
+.cid-r7TUNUzHi1 .card .card-header {
+  border-radius: 0px;
+  border: 0px;
+  padding: 0;
+}
+.cid-r7TUNUzHi1 .card .card-header a.panel-title {
+  margin-bottom: 0;
+  margin-top: -1px;
+  font-weight: 500;
+  font-style: normal;
+  display: block;
+  text-decoration: none !important;
+  line-height: normal;
+}
+.cid-r7TUNUzHi1 .card .card-header a.panel-title:focus {
+  text-decoration: none !important;
+}
+.cid-r7TUNUzHi1 .card .card-header a.panel-title h4 {
+  border: 1px solid #dfdfdf;
+  padding: 1.3rem 2rem;
+  margin-bottom: 0;
+}
+.cid-r7TUNUzHi1 .card .card-header a.panel-title h4 .sign {
+  padding-right: 1rem;
+}
+.cid-r7TUNUzHi1 H2 {
+  color: #149dcc;
 }
